Fix formatting and spacing in styles.css

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Madimi+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Madimi+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Madimi+One&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 * {
   padding: 0;
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-body{
+body {
   background-color: aliceblue;
 }
 .container {
@@ -176,12 +176,11 @@ body{
   top: -0.3rem;
   width: 350%;
 }
-.common-content a{
+.common-content a {
   display: inline;
 }
-strong{
+strong {
   text-align: center;
   justify-content: center;
   padding-left: 6rem;
-
 }
